# dimlpfidex

./: .buildinfo  .clang-format  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  RELEASE.md  RFTest.rls  Untitled.ipynb  autobuild.sh  build.py  buildcpp.py  config.json  datanorm  doc.md  example.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sonar-project.properties  testSampleData.txt  tests.sh
.doctrees/: environment.pickle  index.doctree
_sources/: index.rst.txt
api/: classAnte.html  classAntecedent.html  classAttrName.html  classBagDimlp.html  classBpNN.html  classCannotCreateDirectoryError.html  classCannotOpenFileError.html  classCleanRuleStruct.html  classCommandArgumentException.html  classDataSet.html  classDataSetFid.html  classDimlp.html  classDimlpRule.html  classErrorHandler.html  classFidex.html  classFidexAlgo.html  classFidexGloNameSpace_1_1Hyperspace.html  classFidexNameSpace_1_1Hyperspace.html  classFileContentError.html  classFileFormatError.html  classFileNotFoundError.html  classFloatRandomFunction.html  classHyperbox.html  classHyperspace.html  (+607 more)
common/: CMakeLists.txt  normalization.py
common/cpp/: CMakeLists.txt
common/cpp/src/: antecedant.cpp  antecedant.h  antecedent.cpp  antecedent.h  checkFun.cpp  checkFun.h  dataSet.cpp  dataSet.h  errorHandler.h  hyperbox.cpp  parameters.cpp  parameters.h  rule.cpp  rule.h  stringI.cpp  stringI.h
dimlp/: CMakeLists.txt  computeRocCurve.py  convKeras.py  convKerasV1.py  convKerasV2.py  crossValid.py  crossValidDimlpRul.py  crossValidSvm.py  gradBoost1.py  gradBoost1.py:Zone.Identifier  gradBoostTrn.py  imageAnalyser.py  imageAnalyserV2.py  mlpTrn.py  randForests1.py  randForests1.py:Zone.Identifier  randForestsTrn.py  rgbToHSL.py  rulesConversion.py  stairObj.py  stats.txt  svmTrn.py  trnFun.py
dimlp/cpp/: CMakeLists.txt
dimlp/cpp/Tests/: DensCls.cpp  DensClsFct.cpp  DimlpCls.cpp  DimlpClsFct.h  DimlpPred.cpp  DimlpPredFct.cpp  DimlpPredFct.h  DimlpRul.cpp  DimlpRulFct.cpp  ante.h  attrName.cpp  attrName.h  bagDimlp.cpp  bagDimlp.h  bpNN.cpp  bpNN.h  checkFun.cpp  checkFun.h  cleanRS.cpp  dataSet.cpp  dataSet.h  dimlp.cpp  errFunct.h  layer.cpp  layer.h  layerD2.h  layerD3.cpp  layerD4.h  layerDmp.h  layerFdp.h  layerSP3.h  layerSP4.h  layerSP5.h  randFun.cpp  randFun.h  realHyp.cpp  realHyp.h  realHyp2.cpp  realHyp2.h  rule.h  (+8 more)
dimlp/cpp/src/: CrossValid.cpp  DensCls.cpp  DensClsFct.cpp  DensClsFct.h  DimlpBT.cpp  DimlpBTFct.cpp  DimlpBTFct.h  DimlpCls.cpp  DimlpClsFct.cpp  DimlpClsFct.h  DimlpClsFctV1.cpp  DimlpClsFctV1.h  DimlpPred.cpp  DimlpPredFct.cpp  DimlpPredFct.h  DimlpPredFctV1.cpp  DimlpPredFctV1.h  DimlpRul.cpp  DimlpRulFct.cpp  DimlpRulFct.h  DimlpRulFctV1.cpp  DimlpRulFctV1.h  DimlpTrn.cpp  DimlpTrnFct.cpp  DimlpTrnFct.h  DimlpTrnFctTemp.cpp  DimlpTrnFctTemp.h  ante.cpp  ante.h  attrName.cpp  attrName.h  bagDimlp.cpp  bagDimlp.h  bpNN.cpp  bpNN.h  checkFun.cpp  checkFun.h  cleanRS.cpp  cleanRS.h  dataSet.cpp  (+73 more)
dimlp/docs/: formats.txt
dimlp/pybind/: bindings.cpp
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  FindSphinx.cmake  common.rst  conf.py  dimlp.rst  fidex.rst  fidexglo.rst  hyperlocust.rst  index.rst
example/: CMakeLists.txt
example/cpp/: CMakeLists.txt
example/cpp/include/: examples.hpp
example/cpp/src/: examples.cpp
example/pybind/: bindings.cpp
fidex/: CMakeLists.txt
fidex/cpp/: CMakeLists.txt
fidex/cpp/src/: checkCovSize.cpp  checkFun.cpp  checkFun.h  dataSet.cpp  dataSet.h  fidex.cpp  fidexAlgo.cpp  fidexAlgo.h  fidexFct.cpp  fidexFct.h  fidexGlo.cpp  fidexGloFct.cpp  fidexGloFct.h  fidexGloRules.cpp  fidexGloRulesFct.cpp  fidexGloRulesFct.h  fidexGloStats.cpp  fidexGloStatsFct.cpp  fidexGloStatsFct.h  getRulesFun.cpp  getRulesFun.h  hyperLocus.cpp  hyperLocus.h  hyperbox.cpp  hyperbox.h  hyperspace.cpp  hyperspace.h
fidex/pybind/: bindings.cpp
fidexGlo/cpp/: CMakeLists.txt
fidexGlo/cpp/src/: checkCovSize.cpp  checkFun.cpp  checkFun.h  dataSet.cpp  dataSet.h  fidexAlgo.cpp  fidexAlgo.h  fidexFct.h  fidexGlo.cpp  fidexGloFct.cpp  fidexGloFct.h  fidexGloFctV1.cpp  fidexGloFctV1.h  fidexGloRules.cpp  fidexGloRulesFct.cpp  fidexGloRulesFct.h  fidexGloStats.cpp  fidexGloStatsFct.cpp  fidexGloStatsFct.h  getRulesFun.cpp  getRulesFun.h  hyperLocus.cpp  hyperbox.cpp  hyperbox.h  hyperspace.cpp  hyperspace.h
fidexGlo/cpp/tests/: config.json  config_fidex.json  config_fidexGloRules.json  config_fidexGloStats.json  fidexGlo.json  new-rules.json  tests.cpp  tests.h  tests.sh
fidexGlo/cpp/tests/dataset/data/: dimlp.rls  modified-data.csv  new_rules.txt  stats.txt  test.out  test.txt  test_true_classes.txt
fidexTests/cpp/: CMakeLists.txt  fidexTests.cpp  tests.cpp
fidexTests/cpp/headers/: commonTests.hpp  fidexCommonTests.hpp  fidexGloTests.hpp  fidexTests.hpp  parametersTests.hpp  tests.hpp  utils.hpp
fidexTests/cpp/src/: commonTests.cpp  fidexCommonTests.cpp  fidexGloTests.cpp  parametersTests.cpp  utils.cpp
hyperLocus/cpp/: CMakeLists.txt
hyperLocus/cpp/src/: checkFun.cpp  checkFun.h  dataSet.cpp  dataSet.h  hyperLocus.cpp  hyperLocusFct.cpp  hyperLocusFct.h
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  tests.cpp
tests/cpp/headers/: commonTests.hpp  dimlpTests.hpp  fidexTests.hpp  parametersTests.hpp  tests.hpp  utils.hpp
tests/cpp/src/: commonTests.cpp  dimlpTests.cpp  fidexTests.cpp  parametersTests.cpp  utils.cpp
tests/dataset/: info.txt
tests/dataset/data/: attributes.txt  new_rules.txt  normalization_stats.txt  original-data.csv  train.txt  train_true_classes.txt
tests/templates/: config_densCls.json  config_dimlpBT.json  config_dimlpCls.json  config_dimlpPred.json  config_dimlpRul.json  config_dimlpTrn.json  config_fidex.json  config_fidexGlo.json  config_fidexGloRules.json  config_fidexGloRules_1.json  config_fidexGloRules_2.json  config_fidexGloStats.json  config_fidexGlo_1.json  config_fidexGlo_2.json  config_fidex_1.json  config_fidex_2.json  default_config.json  rules.json  tests.sh
(+1510 files in other folders)
